--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "node-sass": "^8.0.0",
+    "firebase": "^10.12.5",
+    "firebase-tools": "^13.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
@@ -15,6 +16,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
+    "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
